--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+my-app/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
